--- a/StudyBook_ProgrammingErlang2nd/Makefile
+++ b/StudyBook_ProgrammingErlang2nd/Makefile
@@ -29,9 +29,11 @@ application1: compile
 subdirs:
 	cd ch02; $(MAKE)
 	cd ch03; $(MAKE)
+	cd ch12; $(MAKE)
 
 clean:
 	rm -rf *.beam erl_crash.dump
 	cd ch02; $(MAKE) clean
 	cd ch03; $(MAKE) clean
+	cd ch12; $(MAKE) clean
 
